src/styles/main.sass
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap')

*
  margin: 0
  padding: 0
  box-sizing: border-box
  font-family: 'Montserrat'
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button 
  -webkit-appearance: none
  margin: 0
input[type="number"] 
  -moz-appearance: textfield
input[type="number"]:hover,
input[type="number"]:focus 
  -moz-appearance: number-input

